fix layout issues

--- a/src/css/home/_01-intro.css
+++ b/src/css/home/_01-intro.css
@@ -12,7 +12,7 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    margin: 0;
+    margin: 0 auto;
     padding: 2.36em 0 0;
     background: url("../assets/images/bg-main.png") repeat;
     background-position: top center;
